[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-ip"
version = "0.1.0"
description = "IP detection library"
authors = [{ name="Sanaap" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lib_python_ip = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
