[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-python-ip"
version = "0.1.0"
description = "IP detection library"
authors = [{ name="Sanaap" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "importlib-resources>=6.4.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lib_python_ip = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=7,<8.4.2",
]
